Added basic functions
